force-app/main/default/objects/ASF_Case_Checklist_Master__c/ASF_Case_Checklist_Master__c.object-meta.xml
<CustomObject>
    <label>Case Checklist Master</label>
    <nameField>
        <label>Case Checklist Master Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Checklist Masters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>