force-app/main/default/objects/ASF_Case_Checklist_Master__c/fields/Case_Rule__c.field-meta.xml
<CustomField>
    <fullName>Case_Rule__c</fullName>
    <label>Case Rule</label>
    <referenceTo>ASF_Case_Rule__c</referenceTo>
    <relationshipLabel>Case Checklist Masters</relationshipLabel>
    <relationshipName>Case_Checklist_Masters</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>