force-app/main/default/objects/ASF_Case_Checklist_Master__c/fields/Checklist_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Checklist_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Checklist External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>