force-app/main/default/objects/ASF_Case_Checklist_Master__c/fields/Picklist_Options__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Options__c</fullName>
    <description>This field is used to show the different Pick list options based on ASF_pendingCaseChecklistEdit LWC</description>
    <label>Picklist Options</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>